navigation z-index bag fix

--- a/src/app/components/galleries/masonry-st1/masonry-st1.component.scss
+++ b/src/app/components/galleries/masonry-st1/masonry-st1.component.scss
@@ -22,6 +22,10 @@
     opacity: .8;
     transition: all .3s linear;
 
+    &:hover{
+      opacity: 1;
+    }
+
     &:nth-child(2) {
       grid-column: 2;
       grid-row: 1/3;
